small homepage edits

--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
 </head>
 
 <body>
-  <div style="float:right;position:absolute;right:30vw;margin-top:100px;">
-  </div>
-  <div style="margin-left:17vw;margin-right:15vw;text-align:left">
+  <center>
+    <div style="display:inline-block;text-align:left;">
     <h1 style="padding-top:20px;font-size:22px;">Jack Ceroni's Home Page</h1>
     <div style="width:900px;">
     <h3>About Me</h3>
-    <p>Hello there! My name is Jack, and I'm a high school student from the Greater Toronto Area with interests in mathematics, physics, engineering and quantum computing.
+    <p>Hello there! My name is Jack, and I'm a high school student (soon to be first-year undergraduate student at the University of Toronto) from the Greater Toronto Area with interests in mathematics, physics, engineering and quantum computing.
     In my free time, I like to:</p>
     <ul>
     <li>Entangle qubits (fake ones, I don't have enough money to buy the real thing...)</li>
@@ -40,10 +39,11 @@ and taking part in the <a href="https://www.perimeterinstitute.ca/outreach/stude
 <p>Right now, I'm very involved in open-source quantum software, and have contributed to libraries such as Cirq, Qiskit, and StrawberryFields.</p>
 
 <p>I'm currently working on a bunch of projects in quantum computing, mathematics, and physics. The purpose of this website is to hopefully contain a (mostly) up-to-date log of all the stuff I'm doing.</p>
-</div>
     <h4 style="margin-top:40px;">I sometimes write stuff online</h4>
     <p><a href="https://github.com/Lucaman99">Github</a> | <a href="https://www.quora.com/profile/Jack-Ceroni">Quora</a> | <a href="https://lucaman99.github.io/new_blog">Blog</a> | <a href="https://brilliant.org/profile/jack-tj20jb/">Brilliant.org</a> | <a href="https://stackexchange.com/users/14606850/jack-ceroni">Stack Exchange</a> | <a href="https://en.wikipedia.org/wiki/User:JackCer9">Wikipedia</a></p>
     <p>Send me an email: <a href="MAILTO:jackceroni@gmail.com">jackceroni@gmail.com</a>
+    </p>
+    <p>Follow me on Twitter: <a href="https://twitter.com/jack_ceroni/">@jack_ceroni</a>
     </p>
     <p><a href="https://lucaman99.github.io/newsletters/">Subscribe to my monthly newsletter</a></p>
     <br>
@@ -59,7 +59,8 @@ and taking part in the <a href="https://www.perimeterinstitute.ca/outreach/stude
     </ul>
     <br>
     <hr class="line" style="width:900px;float:left;">
-  </div>
+    </div>
+  </center>
 </body>
 <style>
  body {
