--- a/index.html
+++ b/index.html
@@ -36,9 +36,14 @@
 This includes taking part in a <a href="https://github.com/Lucaman99/UofT-Math-Mentorship-Final-Presentation">pure mathematics project</a> at the University of Toronto, being a co-contributor to a <a href="https://community.qiskit.org/textbook/">quantum computing textbook</a> (it's actually not that impressive, there are a lot of co-authors), being a <a href="https://community.qiskit.org/advocates/">Qiskit advocate</a>
 and taking part in the <a href="https://www.perimeterinstitute.ca/outreach/students/programs/international-summer-school-young-physicists">ISSYP Program</a> at <a href="https://www.perimeterinstitute.ca/">the Perimeter Institute for Theoretical Physics</a>.</p>
 
-<p>Right now, I'm very involved in open-source quantum software, and have contributed to libraries such as Cirq, Qiskit, and StrawberryFields.</p>
+<p>Right now, I'm very involved in open-source quantum software, and have contributed to libraries such as Cirq, Qiskit, and StrawberryFields. 
+</p>
+<p>
+  I am currently working as 
+  a quantum software development intern at <a href="https://www.xanadu.ai/">Xanadu</a>, a quantum computing company located in Toronto.
+</p>
 
-<p>I'm currently working on a bunch of projects in quantum computing, mathematics, and physics. The purpose of this website is to hopefully contain a (mostly) up-to-date log of all the stuff I'm doing.</p>
+<p>I'm always working on a bunch of projects in quantum computing, mathematics, and physics. The purpose of this website is to hopefully contain a (mostly) up-to-date log of all the stuff I'm doing.</p>
     <h4 style="margin-top:40px;">I sometimes write stuff online</h4>
     <p><a href="https://github.com/Lucaman99">Github</a> | <a href="https://www.quora.com/profile/Jack-Ceroni">Quora</a> | <a href="https://lucaman99.github.io/new_blog">Blog</a> | <a href="https://brilliant.org/profile/jack-tj20jb/">Brilliant.org</a> | <a href="https://stackexchange.com/users/14606850/jack-ceroni">Stack Exchange</a> | <a href="https://en.wikipedia.org/wiki/User:JackCer9">Wikipedia</a></p>
     <p>Send me an email: <a href="MAILTO:jackceroni@gmail.com">jackceroni@gmail.com</a>
@@ -59,6 +64,7 @@ and taking part in the <a href="https://www.perimeterinstitute.ca/outreach/stude
     </ul>
     <br>
     <hr class="line" style="width:900px;float:left;">
+    </div>
     </div>
   </center>
 </body>
