--- a/newsletters/index.html
+++ b/newsletters/index.html
@@ -14,14 +14,16 @@
   <div style="margin-left:20vw;margin-right:20vw;text-align:left">
     <br><br>
     <h2>Past Newsletters</h2>
-    <p>This is a list of all past issues of my newsletter. You can sign up for my email newsletter <a href="https://landing.mailerlite.com/webforms/landing/s9j4f6">here</a>!</p>
-    <p>. . . . . . . . . . . . . . . . . .</p>
+    <p>This is a list of all past issues of my newsletter. You can sign up for my email newsletter <a href="https://landing.mailerlite.com/webforms/landing/s9j4f6">here</a>.</p>
+   <hr class="line" style="width:60vw;">
+   <br>
     <div style="width:800px;">
     <ul>
         <li><a href="https://preview.mailerlite.com/y6l5q6">October 2019 Newsletter</a></li>
         <li><a href="https://preview.mailerlite.com/d5f7p6">November 2019 Newsletter</a></li>
         <li><a href="https://preview.mailerlite.com/u8i3f4">December 2019 Newsletter</a></li>
         <li><a href="https://preview.mailerlite.com/j3g3x0">January/February 2020 Newsletter</a></li>
+        <li><a href="https://preview.mailerlite.com/y8y0b0">March/April/May 2020 Newsletter</a></li>
             <br>
     </ul>
     </div>
@@ -31,12 +33,22 @@
 
     <style>
       body {
-        font-family:"Lucida Console", Monaco, monospace
+       font-family:"Lucida Console", Monaco, monospace;
       }
       ul {
-        font-size:13px;
+          font-size:12px;
       }
       p {
-        font-size:13px;
+          font-size:12px;
       }
-    </style>
+      .line {
+          border:0;
+          height:1px;
+          float:left;
+          background-image:-webkit-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
+          background-image:-moz-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
+          background-image:-ms-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
+          background-image:-o-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0)
+      }
+      a:hover{text-decoration:none;color:grey}a{color:#000;}
+     </style> 
