--- a/munkres/7/6.html
+++ b/munkres/7/6.html
@@ -60,6 +60,10 @@
     proved that for any $x \ \in \ B$, there exists some point $y \ \in \ A$ such that $f(y) \ = \ x$. Thus,
     $h$ is surjective and injective, making it a bijection.
     <br><br>
+    <center>
+    <img src="assets/h_bijection.png" style="width:400px;">
+    </center>
+    <br>
     <b>Part B</b>
     <p>
         <div>
