--- a/new_blog/index.html
+++ b/new_blog/index.html
@@ -15,17 +15,16 @@
             <h2>The Coherent St$|\alpha\rangle$te</h2>
                 <! -- $|\alpha\rangle \ = \ e^{-\frac{|\alpha|^2}{2}} \ \displaystyle\sum_{n \ = \ 0}^{\infty} \ \frac{\alpha^n}{\sqrt{n!}} |n\rangle$ -->
             <h5>A semi-coherent assortment of thoughts, ramblings and theorems</h5>
-            <a href="https://lucaman99.github.io/new_blog/disclaimer.html" style="font-size:11px;">Political Post Disclaimer</a>
-            <br><br>
             <hr class="line">
             <h4 style="padding-top:15px;font-size:14px;"><b>2020</b></h4>
             <ul>
-                <li>May 05 2020 // <a href="https://lucaman99.github.io/new_blog/2020/may5.html">Abstract Algebra Thoughts #1</a></li>
+		<li>Jul XX 2020 //  <a href="https://lucaman99.github.io/new_blog/2020/julXX.html">Sampling Bosons</a></li>
+                <li style="padding-top:5px;">May 05 2020 // <a href="https://lucaman99.github.io/new_blog/2020/may5.html">Abstract Algebra Thoughts #1</a></li>
                 <li style="padding-top:5px;">Mar 16 2020 // <a href="https://lucaman99.github.io/new_blog/2020/mar16.html">Fun With Graphs and QAOA</a></li>
             </ul>
                 <h4 style="padding-top:15px;font-size:14px;"><b>2019</b></h4>
                 <ul>
-                    <li>Dec 28 2019 // <a href="https://lucaman99.github.io/new_blog/2019/dec28_1.html">Density Matrices (Test Post)</a></li>
+                    <li>Dec 28 2019 // <a href="https://lucaman99.github.io/new_blog/2019/dec28_1.html">Density Matrices</a></li>
                     <li style="padding-top:5px;">Dec 28 2019 // <a href="https://lucaman99.github.io/new_blog/2019/dec28_2.html">A New Home for the Coherent State</a></li>
                 </ul>
                 <div style="width:800px;">
