--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@
     <li>Set digital trees on fire with my homemade computer simulations</li>
 </ul>
 <p>Over the past couple years, I have had some very interesting experiences.
-This includes taking part in a <a href="https://github.com/Lucaman99/UofT-Math-Mentorship-Final-Presentation">pure mathematics project</a> at the University of Toronto, being a co-contributor to a <a href="https://community.qiskit.org/textbook/">quantum computing textbook</a> (it's actually not that impressive, there are a lot of co-authors), being a <a href="https://community.qiskit.org/advocates/">Qiskit advocate</a>
+This includes taking part in a <a href="https://github.com/Lucaman99/UofT-Math-Mentorship-Final-Presentation">pure mathematics project</a> at the University of Toronto, being a <a href="https://community.qiskit.org/advocates/">Qiskit advocate</a> 
+(and in the process, writing some material for an online <a href="https://community.qiskit.org/textbook/">quantum computing textbook</a>),
 and taking part in the <a href="https://www.perimeterinstitute.ca/outreach/students/programs/international-summer-school-young-physicists">ISSYP Program</a> at <a href="https://www.perimeterinstitute.ca/">the Perimeter Institute for Theoretical Physics</a>.</p>
 
 <p>Right now, I'm very involved in open-source quantum software, and have contributed to libraries such as Cirq, Qiskit, and StrawberryFields. 
 </p>
 <p>
   I am currently working as 
-  a quantum software development intern at <a href="https://www.xanadu.ai/">Xanadu</a>, a quantum computing company located in Toronto.
+  a quantum software intern at <a href="https://www.xanadu.ai/">Xanadu</a>, a quantum computing company located in Toronto.
 </p>
 
 <p>I'm always working on a bunch of projects in quantum computing, mathematics, and physics. The purpose of this website is to hopefully contain a (mostly) up-to-date log of all the stuff I'm doing.</p>
