--- a/index.html
+++ b/index.html
@@ -58,10 +58,7 @@ and taking part in the <a href="https://www.perimeterinstitute.ca/outreach/stude
     <h3>Current Projects</h3>
     <ul>
       <br>
-      <li><a href="https://lucaman99.github.io/qc">Quantum Computing</a></li>
-      <li><a href="https://lucaman99.github.io/math">Pure/Applied Mathematics</a></li>
-      <li><a href="https://lucaman99.github.io/physics">Physics</a></li>
-      <li><a href="https://lucaman99.github.io/content">Additional Content/Other Fun Stuff</a></li>
+      <b>UNDER RENOVATIONS (July 14th, 2020)</b>
     </ul>
     <br>
     <hr class="line" style="width:900px;float:left;">
