--- a/munkres/index.html
+++ b/munkres/index.html
@@ -20,7 +20,8 @@
 <p>Section 3: <a href="https://lucaman99.github.io/munkres/3/13.html">Problem 13</a></p>
 <p>Section 4: <a href="https://lucaman99.github.io/munkres/4/8.html">Problem 8</a></p>
 <p>Section 7: <a href="https://lucaman99.github.io/munkres/7/4.html">Problem 4</a>, <a href="https://lucaman99.github.io/munkres/7/6.html">Problem 6</a></p>
-<p>Section 11: <a href="https://lucaman99.github.io/munkres/11/5-6-7.html">Problems 5, 6 and 7</a>
+<p>Section 11: <a href="https://lucaman99.github.io/munkres/11/5-6-7.html">Problems 5, 6 and 7</a>, <a href="https://lucaman99.github.io/munkres/11/8.html">Problems 8</a>,</p>
+<p>Section 13: <a href="https://lucaman99.github.io/munkres/13/5.html">Problem 5</a></p>
 <p>Section 16: <a href="https://lucaman99.github.io/munkres/16/9.html">Problem 9</a></p>
 <p>Section 17: <a href="https://lucaman99.github.io/munkres/17/1.html">Problem 1</a>, <a href="https://lucaman99.github.io/munkres/17/2.html">Problem 2</a>, <a href="https://lucaman99.github.io/munkres/17/4.html">Problem 4</a>, <a href="https://lucaman99.github.io/munkres/17/13.html">Problem 13</a>, <a href="https://lucaman99.github.io/munkres/17/19.html">Problem 19 (Incomplete)</a></p>
     <p>Section 18: <a href="https://lucaman99.github.io/munkres/18/11.html">Problem 11</a></p>
