--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@ and taking part in the <a href="https://www.perimeterinstitute.ca/outreach/stude
     <br>
     <h3>Current Projects</h3>
     <ul>
-      <br>
-      <b>UNDER RENOVATIONS (July 14th, 2020)</b>
+	<br>
+	<a href="./feed.html">The Feed</a>
+	<br><br>
+      <b>UNDER RENOVATIONS (August 1st, 2020)</b>
     </ul>
     <br>
     <hr class="line" style="width:900px;float:left;">
