--- a/munkres/index.html
+++ b/munkres/index.html
@@ -28,7 +28,8 @@
     <p>Section 19: <a href="https://lucaman99.github.io/munkres/19/1.html">Problem 1</a>, <a href="https://lucaman99.github.io/munkres/19/2.html">Problem 2</a></p>
     <p>Section 20: <a href="https://lucaman99.github.io/munkres/20/3.html">Problem 3 (Incomplete)</a>, <a href="https://lucaman99.github.io/munkres/20/9.html">Problem 9</a>, <a href="https://lucaman99.github.io/munkres/20/11.html">Problem 11</a></p>
     <p>Section 21: <a href="https://lucaman99.github.io/munkres/21/8.html">Problem 8</a>, <a href="https://lucaman99.github.io/munkres/21/11.html">Problem 11</a></p>
-    <p>Topological Groups: <a href="https://lucaman99.github.io/munkres/Top_Groups/1.html">Problem 1</a>, <a href="https://lucaman99.github.io/munkres/Top_Groups/3.html">Problem 3</a>
+    <p>Topological Groups: <a href="https://lucaman99.github.io/munkres/Top_Groups/1.html">Problem 1</a>, <a href="https://lucaman99.github.io/munkres/Top_Groups/3.html">Problem 3</a></p>
+    <p>Section 24: <a href="https://lucaman99.github.io/munkres/24/4.html">Problem 4</a></p>
     <br><br><br>
     </div>
 </center>
