--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h1 style="padding-top:20px;font-size:22px;">Jack Ceroni's Home Page</h1>
     <div style="width:900px;">
     <h3>About Me</h3>
-    <p>Hello there! My name is Jack, and I'm a high school student (soon to be first-year undergraduate student at the University of Toronto) from the Greater Toronto Area with interests in mathematics, physics, engineering and quantum computing.
+    <p>Hello there! My name is Jack, and I'm a first-year undergraduate student at the University of Toronto with interests in mathematics, physics, engineering and quantum computing.
     In my free time, I like to:</p>
     <ul>
     <li>Entangle qubits (fake ones, I don't have enough money to buy the real thing...)</li>
@@ -35,13 +35,13 @@
 <p>Over the past couple years, I have had some very interesting experiences.
 This includes taking part in a <a href="https://github.com/Lucaman99/UofT-Math-Mentorship-Final-Presentation">pure mathematics project</a> at the University of Toronto, being a <a href="https://community.qiskit.org/advocates/">Qiskit advocate</a> 
 (and in the process, writing some material for an online <a href="https://community.qiskit.org/textbook/">quantum computing textbook</a>),
-and taking part in the <a href="https://www.perimeterinstitute.ca/outreach/students/programs/international-summer-school-young-physicists">ISSYP Program</a> at <a href="https://www.perimeterinstitute.ca/">the Perimeter Institute for Theoretical Physics</a>.</p>
-
-<p>Right now, I'm very involved in open-source quantum software, and have contributed to libraries such as Cirq, Qiskit, and StrawberryFields. 
+and taking part in the <a href="https://www.perimeterinstitute.ca/outreach/students/programs/international-summer-school-young-physicists">ISSYP Program</a> at <a href="https://www.perimeterinstitute.ca/">the Perimeter Institute for Theoretical Physics</a>. 
+I'm very involved in open-source quantum computational software, and have contributed to libraries such as Cirq, Qiskit, and StrawberryFields. 
 </p>
 <p>
   I am currently working as 
-  a quantum software intern at <a href="https://www.xanadu.ai/">Xanadu</a>, a quantum computing company located in Toronto.
+  a quantum software intern at <a href="https://www.xanadu.ai/">Xanadu</a>, a quantum computing company located in Toronto, developing tutorials on concepts in quantum machine learning and helping to build 
+  out their <a href="https://pennylane.ai/">quantum machine learning library</a>.
 </p>
 
 <p>I'm always working on a bunch of projects in quantum computing, mathematics, and physics. The purpose of this website is to hopefully contain a (mostly) up-to-date log of all the stuff I'm doing.</p>
@@ -49,7 +49,6 @@ and taking part in the <a href="https://www.perimeterinstitute.ca/outreach/stude
     <p><a href="https://github.com/Lucaman99">Github</a> | <a href="https://www.quora.com/profile/Jack-Ceroni">Quora</a> | <a href="https://lucaman99.github.io/new_blog">Blog</a> | <a href="https://brilliant.org/profile/jack-tj20jb/">Brilliant.org</a> | <a href="https://stackexchange.com/users/14606850/jack-ceroni">Stack Exchange</a> | <a href="https://en.wikipedia.org/wiki/User:JackCer9">Wikipedia</a></p>
     <p>Send me an email: <a href="MAILTO:jackceroni@gmail.com">jackceroni@gmail.com</a>
     </p>
-    <p>Follow me on Twitter: <a href="https://twitter.com/jack_ceroni/">@jack_ceroni</a>
     </p>
     <p><a href="https://lucaman99.github.io/newsletters/">Subscribe to my monthly newsletter</a></p>
     <br>
@@ -67,16 +66,18 @@ and taking part in the <a href="https://www.perimeterinstitute.ca/outreach/stude
     </div>
     </div>
   </center>
-</body>
-<style>
- body {
+  <!--
+	   body {
   font-family:"Lucida Console", Monaco, monospace;
  }
- ul {
-     font-size:12px;
+  -->
+</body>
+<style>
+ul {
+     font-size:15px;
  }
  p {
-     font-size:12px;
+     font-size:15px;
  }
  .line {
      border:0;
