--- a/feed.html
+++ b/feed.html
@@ -54,15 +54,17 @@
   </center>
 </body>
 
-<style>
- body {
+<!--  body {
   font-family:"Lucida Console", Monaco, monospace;
  }
+-->
+
+<style>
  ul {
-     font-size:12px;
+     font-size:15px;
  }
  p {
-     font-size:12px;
+     font-size:15px;
  }
  .line {
      border:0;
