--- a/physics/index.html
+++ b/physics/index.html
@@ -14,7 +14,9 @@
     <br><br>
     <h2>Physics</h2>
     <p>This is a (mostly) up-to-date portfolio of all the work/projects I have done/am doing relating to physics.</p>
-    <p>. . . . . . . . . . . . . . . . . .</p>
+    <br>
+    <hr class="line">
+    <br>
     <div style="width:800px;">
     <h3>Quantum Mechanics</h3>
     <ul>
@@ -42,12 +44,20 @@
 
     <style>
       body {
-        font-family:"Lucida Console", Monaco, monospace
+        font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"
       }
       ul {
-        font-size:13px;
+        font-size:14px;
       }
       p {
-        font-size:13px;
+        font-size:14px;
       }
+      .line {
+     border:0;
+     height:1px;
+     background-image:-webkit-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
+     background-image:-moz-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
+     background-image:-ms-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
+     background-image:-o-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0)
+ }
     </style>
