--- a/qm/index.html
+++ b/qm/index.html
@@ -26,6 +26,13 @@
 <p>Chapter 6: <a href="https://lucaman99.github.io/qm/6/5.html">Problem 6.5</a>, <a href="https://lucaman99.github.io/qm/6/7.html">Problem 6.7</a>, <a href="https://lucaman99.github.io/qm/6/10.html">Problem 6.10</a></p>
 <p>Chapter 9: <a href="https://lucaman99.github.io/qm/9/2.html">Problem 9.2</a></p>
 </div>
+<div style="margin-left:25vw;margin-right:25vw;text-align:left">
+  <br>
+<h2>Sakurai Quantum Mechanics Solution Manual</h2>
+<h3>Solution Directory (Incomplete)</h3>
+<!--<p>This is the first time I have ever attempted to make a formal physics solution set, so for my <b>Chapter 1</b> and <b>Chapter 4</b> solutions, I checked some of them against the solutions at <a href="https://physicspages.com/Griffiths%20QM.html">this link</a>. Despite this, all solutions written here were personally constructed, I only used this website to make sure that my solutions were not incorrect.</p>-->
+<p>Chapter 1: <a href="https://lucaman99.github.io/qm/1/4.html">Problem 1.4</a>, <a href="https://lucaman99.github.io/qm/1/7.html">Problem 1.7</a>, <a href="https://lucaman99.github.io/qm/1/11.html">Problem 1.11</a>, <a href="https://lucaman99.github.io/qm/1/14.html">Problem 1.14</a>, <a href="https://lucaman99.github.io/qm/1/15.html">Problem 1.15</a></p>
+</div>
 </center>
 </body>
 </html>
