--- a/qc/index.html
+++ b/qc/index.html
@@ -10,15 +10,33 @@
 
 <body style="padding-bottom:30px;">
   <center>
-  <div style="margin-left:20vw;margin-right:20vw;text-align:left">
+  <div style="display:inline-block;text-align:left;width:900px;">
     <br><br>
     <h2>Quantum Computing</h2>
     <p>This is a (mostly) up-to-date portfolio of all the work/projects I have done/am doing relating to quantum computation.</p>
-    <p>. . . . . . . . . . . . . . . . . .</p>
-    <div style="width:800px;">
-    <h3>Open-Source Projects</h3>
     <br>
-    <b style="font-size:15px;">Google Cirq Projects</b>
+    <hr class="line" style="width:900px;float:left;">
+    <br>
+    <div style="width:900px;">
+    <!--
+    - Intern at Xanadu
+    - Qiskit advocate
+    - Contributed to open-source stuff in the past
+
+    - VQLS
+    - Quantum Walks
+    - D-Wave Stuff
+    - Linear algebra
+    - CV QAOA
+    - QAOA
+    - Mixed State and Density Matrices
+
+    - TFD Generation
+    - Quantum Graph Neural Networks
+  - Variational Quantum Thermalizer
+    -->
+    <br>
+    <b style="font-size:15px;">Past Projects</b>
     <br><br>
     <ul>
       <li>Simulating Deutsch's Algorithm &nbsp; <a href="https://mathacademy.quora.com/Quantum-Algorithm-Simulation-with-Cirq">[Quora blog post]</a></li>
@@ -32,64 +50,31 @@
       <li>Simon's Algorithm Simulation &nbsp; <a href="https://github.com/Lucaman99/Cirq/blob/cirq_ex/examples/simon.py">[Github link]</a></li>
     </ul>
     <br>
-    <b style="font-size:15px;">Qiskit Projects</b>
+    <b style="font-size:15px;">Upcoming/Unfinished Projects</b>
     <br><br>
-    <ul>
-      <li>Variational Quantum Linear Solver Simulation (Accepted to Qiskit Textbook) &nbsp; <a href="https://community.qiskit.org/textbook/ch-paper-implementations/vqls.html">[Qiskit Textbook]</a></li>
-      <br>
-      <li>Linear Algebra for Quantum Computing (Accepted to Qiskit Textbook) &nbsp; <a href="https://community.qiskit.org/textbook/ch-prerequisites/linear_algebra.html">[Qiskit Textbook]</a></li>
-      <br>
-      <li>Quantum Mechanics for Quantum Computing (Pending Acceptance) &nbsp; <a href="https://nbviewer.jupyter.org/github/Lucaman99/qiskit-textbook/blob/quantum_mech_part_1/ch-quantum-hardware/qm_part_1.ipynb">[Python Notebook]</a></li>
-    </ul>
-    <br>
-    <b style="font-size:15px;">Xanadu Projects</b>
-    <br><br>
-    <ul>
-      <li>The Physics of Quantum Optimization + New and Improved Continuous Variable QAOA Notebook &nbsp; <a href="https://nbviewer.jupyter.org/github/Lucaman99/Quantum-Computing/blob/master/xanadu/cvqaoa.ipynb">[Python Notebook]</a></li>
-      <br>
-    </ul>
-    <br>
-    <b style="font-size:15px;">D-Wave Projects</b>
-    <br><br>
-    <ul>
-      <li>Simulating Logic Gates and Two-Number Partitioning with D-Wave's Annealer &nbsp; <a href="https://www.quora.com/q/zvlfybjixsacizwt/Logic-Gate-Simulation-on-a-D-Wave-Quantum-Annealing-Simulator">[Quora blog post]</a></li>
-    </ul>
-    <br>
-    <b style="font-size:15px;">D-Wave Projects</b>
-    <br><br>
-    <ul>
-      <li>Mixed Quantum States and Density Matrices &nbsp; <a href="https://lucaman99.github.io/new_blog/2019/dec28_1.html">[Blog post]</a></li>
-    </ul>
-    <br>
-    <h3>Upcoming Projects (As of November 2019)</h3>
-    <br>
-    <ul>
-      <li>Simulating Protein Folding and Protein Interactions with QAOA (Will be partially open-source)
-        <br><br>
-        <ul>
-          <li>Will include experiments conducted on Rigetti's Cloud Quantum Computing Service!</li>
-          <br>
-          <li>Also will include a new addition to the Qiskit textbook!</li>
-        </ul>
-      </li>
-      <br>
-    <li>The Variational Quantum Thermalizer</li>
-    <br>
-    <li>Simulation of Thermofield Double States</li>
-    </ul>
     </div>
     </div>
     </body>
     </html>
 
     <style>
-      body {
-        font-family:"Lucida Console", Monaco, monospace
-      }
-      ul {
-        font-size:13px;
-      }
-      p {
-        font-size:13px;
-      }
+    body {
+     font-family:"Lucida Console", Monaco, monospace;
+    }
+    ul {
+        font-size:12px;
+    }
+    p {
+        font-size:12px;
+    }
+    .line {
+        border:0;
+        height:1px;
+        float:left;
+        background-image:-webkit-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
+        background-image:-moz-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
+        background-image:-ms-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0);
+        background-image:-o-linear-gradient(left,#f0f0f0,#8c8b8b,#f0f0f0)
+    }
+    a:hover{text-decoration:none;color:grey}a{color:#000;}
     </style>
