--- a/feed.html
+++ b/feed.html
@@ -54,17 +54,15 @@
   </center>
 </body>
 
-<!--  body {
+<style>
+ body {
   font-family:"Lucida Console", Monaco, monospace;
  }
--->
-
-<style>
  ul {
-     font-size:15px;
+     font-size:12px;
  }
  p {
-     font-size:15px;
+     font-size:12px;
  }
  .line {
      border:0;
