--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-141929899-1');
+ gtag('config', 'UA-141929899-1');
 </script>
 </head>
 
@@ -24,20 +24,14 @@
     <h1 style="padding-top:20px;font-size:22px;">Jack Ceroni's Home Page</h1>
     <div style="width:900px;">
     <h3>About Me</h3>
-    <p>Hello there! My name is Jack, and I'm a first-year undergraduate student at the University of Toronto with interests in mathematics, physics, engineering and quantum computing.
-    In my free time, I like to:</p>
-    <ul>
-    <li>Entangle qubits (fake ones, I don't have enough money to buy the real thing...)</li>
-    <li>"Prove" "theorems"</li>
-    <li>Solve hopelessly long integrals to find expectation values</li>
-    <li>Set digital trees on fire with my homemade computer simulations</li>
-</ul>
-<p>Over the past couple years, I have had some very interesting experiences.
+    <p>Hello there! My name is Jack, and I'm a first-year undergraduate student at the University of Toronto with interests in mathematics, physics, engineering and quantum computing.</p>
+    <p>Over the past couple years, I have had some very interesting experiences.
 This includes taking part in a <a href="https://github.com/Lucaman99/UofT-Math-Mentorship-Final-Presentation">pure mathematics project</a> at the University of Toronto, being a <a href="https://community.qiskit.org/advocates/">Qiskit advocate</a> 
 (and in the process, writing some material for an online <a href="https://community.qiskit.org/textbook/">quantum computing textbook</a>),
 and taking part in the <a href="https://www.perimeterinstitute.ca/outreach/students/programs/international-summer-school-young-physicists">ISSYP Program</a> at <a href="https://www.perimeterinstitute.ca/">the Perimeter Institute for Theoretical Physics</a>. 
 I'm very involved in open-source quantum computational software, and have contributed to libraries such as Cirq, Qiskit, and StrawberryFields. 
-</p>
+    </p>
+    <h3>Current Projects</h3>
 <p>
   I am currently working as 
   a quantum software intern at <a href="https://www.xanadu.ai/">Xanadu</a>, a quantum computing company located in Toronto, developing tutorials on concepts in quantum machine learning and helping to build 
