Munkres stuff, unfinished morin, analysis and rudin notes

--- a/munkres/26/index.html
+++ b/munkres/26/index.html
@@ -166,6 +166,8 @@ MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$']]}});
 	</div>
   -->
 	<br>
+  <b>Problem 11</b>
+  <br>
   <div class="theorem">
       Let $X$ be a compact Hausdorff space. Let $\mathcal{A}$ be a collection of closed connected subsets of $X$ that is simply ordered
       by proper inclusion. Then:
