--- a/reading/papers.html
+++ b/reading/papers.html
@@ -12,10 +12,16 @@
 <body>
   <center>
     <div style="display:inline-block;text-align:left;">
-    <h1 style="padding-top:20px;font-size:22px;">Jack Ceroni's Home Page</h1>
+    <h1 style="padding-top:20px;font-size:22px;">Research Paper List</h1>
     <div style="width:900px;">
         <p style="font-size:12px;">This is a list of particularly interesting papers I have read in the past while, and a 
             list of papers that I am planning on reading soon (I will update this page fairly frequently).</p>
+
+	<hr class="line" style="width:900px;">
+	<br>
+	<ul>
+		<li><i>Entanglement Rate and Area Laws</i> <a href="https://arxiv.org/pdf/1304.5931.pdf">[ Paper ]</a></li>
+	</ul>
    </div>
     </div>
   </center>
