--- a/munkres/27/index.html
+++ b/munkres/27/index.html
@@ -80,6 +80,11 @@
                     <div class="theorem">
                         Let $A$ be compact; let $U$ be an open set containing $A$. Some $\epsilon$-neighbourhood of $A$ is contained in $U$.
                     </div>
+                    <div class="proof">
+                        This implies that we should be able to choose some $\epsilon$ such that all $\epsilon$-balls around $a \ \in \ A$ are in $U$. Since
+                        $U$ is open, for any $x \ \in \ U$ (and thus any $a \ \in \ A$), we can define an $\epsilon_a$-ball around $a$ that that
+                        $B_{\epsilon_a}(a) \ \subset \ U$. 
+                    </div>
                     <br>
                     <b>Problem 4</b>
                     <br>
@@ -87,7 +92,7 @@
 
                     </div>
                     <div class="proof">
-                        Assume that there exists som function $f : 
+                        Assume that there exists some function $f : 
                     </div>
                 </p>
                 <br><br><br><br>
